added post controller
